--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.4",
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
-        "postcss": "^8.1.14",
+        "postcss": "^8.2.4",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "tailwindcss": "^2.0.2",
         "vue": "^2.5.17",
         "vue-loader": "^15.9.5",
         "vue-router": "^3.5.1",
